Contactus: submit form functionality

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,6 +12,6 @@
             #1b1c24af 100%, #00102000);
 }
 
-.text-shadow-dark{
-    text-shadow: #15161C -1px -1px 10px;
+.text-shadow-dark {
+    text-shadow: #858d9a 1px 1px 50px;
 }
